Fixes overflow issue with canvas

--- a/src/css/canvas.scss
+++ b/src/css/canvas.scss
@@ -3,5 +3,8 @@
     top: 0;
     left: 0;
     z-index: -1; //HACK HACK HACK HAAAAAAAAAACK
+    canvas{
+      display: block;
+    }
   }
   
